# pyssam

./: .readthedocs.yml  .zenodo.json  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-paper.yml  python-test.yml
dev/: ssm_example.ipynb
docs/: conf.py  index.rst  modules.rst  pyssam.datasets.rst  pyssam.rst  requirements-docs.txt  requirements.txt
docs/tutorial/: fit_parameters_example.ipynb  mesh_morphing_example.ipynb  sam_example.ipynb  ssam_example.ipynb  ssm_example.ipynb
example_data/lung_landmarks/: edgesCartesian0LLL-case8684.csv  edgesIndex0LLL-case8684.csv  landmarks0LLL-case8684.csv  landmarksLLL-case0576.csv  landmarksLLL-case0596.csv  landmarksLLL-case0645.csv  landmarksLLL-case0723.csv  landmarksLLL-case0739.csv  landmarksLLL-case1276.csv  landmarksLLL-case1437.csv  landmarksLLL-case1442.csv  landmarksLLL-case1616.csv  landmarksLLL-case1943.csv  landmarksLLL-case2456.csv  landmarksLLL-case2523.csv  landmarksLLL-case2827.csv  landmarksLLL-case3948.csv  landmarksLLL-case4002.csv  landmarksLLL-case4301.csv  landmarksLLL-case4444.csv  landmarksLLL-case4702.csv  landmarksLLL-case5216.csv  (+28 more)
paper/: paper.bib  paper.md
pyssam/: __init__.py  appearance_from_xray.py  datasets.py  morph_mesh.py  sam.py  ssam.py  ssm.py  statistical_model_base.py  utils.py
scripts/: click_landmarking.py  games_landmarking.py  particle_entropy_landmarking.py
tests/: test_datasets.py  test_morph_mesh.py  test_sam.py  test_ssam.py  test_ssm.py  test_utils.py
tutorial/: sam_example.ipynb  ssam_example.ipynb  ssm_example.ipynb
(+97 files in other folders)
