[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyssam"
version = "0.1.2"
authors = [
  { name="Josh Williams" },
]
description = "A Python library for statistical modelling of biomedical shape and appearance"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy>=1.23",
  "scikit_learn==1.2.0",
  "scikit_image==0.19.2",
  "networkx==2.5",
  "vedo<=2023.4.6",
  "trimesh"
]

[tool.setuptools]
packages = ["pyssam"]

[project.urls]
"Homepage" = "https://github.com/jvwilliams23/pyssam"
"Bug Tracker" = "https://github.com/jvwilliams23/pyssam/issues"
